fixtures/parser/invalid/05-invalid-context.fl
component InvalidContext {
  stack {
    motion enter {
      duration: token(duration.fast)
      ease: token(ease.standard)
    }
  }
}
